vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sql_expr.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sql_expr.vv:8:21: error: expression evaluated but not used
    6 |     (sql db {
    7 |         select from User limit $embed_file(@FILE).len
    8 |     } or { []User{} }).len
      |                        ~~~
    9 | }
