vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sql_expr.vv
struct User {
	id int
}

fn main() {
	(sql db {
		select from User limit $embed_file(@FILE).len
	} or { []User{} }).len
}
